# biodata-cache

./: .gitignore  CITATION.cff  PIPELINE.md  PLAN.md  README.md  conftest.py  pyproject.toml  run_tests.py  setup.py
.github/workflows/: link-issues-by-milestone.yml  tag_and_publish.yml  test_and_lint.yml
scripts/: build_platform_df.py  build_platform_ecephys.py  build_platform_qc.py  build_swdb_metadata.py  explore_storage_lens.py  hide_qc_acorn.py  integration_tests.py  normalization.py  test_columns_integration.py  test_foraging_integration.py  test_qc_timestamp_proof.py  test_smartspim_integration.py  update_fib_traces_table.py  update_qc_table.py
src/biodata_cache/: __init__.py  backend.py  models.py  registry.py  sync.py  utils.py
src/zombie_squirrel/: __init__.py  acorns.py  forest.py  squirrel.py  sync.py  utils.py
tests/: __init__.py  test_acorns.py  test_backend.py  test_backend_coverage.py  test_build_platform_qc.py  test_columns.py  test_forest_coverage.py  test_models.py  test_registry.py  test_squirrel.py  test_sync.py  test_sync_coverage.py  test_trees.py  test_utils.py
tests/acorn_helpers/: test_asset_basics.py  test_assets_smartspim.py  test_custom.py  test_foraging_session.py  test_platform_exaspim.py  test_platform_fib.py  test_platform_smartspim.py  test_qc.py  test_qc_coverage.py  test_raw_to_derived.py  test_source_data.py  test_swdb_metadata.py  test_unique_genotypes.py  test_unique_project_names.py  test_unique_subject_ids.py
tests/cache_table_helpers/: __init__.py  test_asset_basics.py  test_custom.py  test_platform_df.py  test_platform_ecephys_spikes.py  test_platform_ecephys_units.py  test_platform_exaspim.py  test_platform_fib.py  test_platform_fib_traces.py  test_platform_mouselight.py  test_platform_smartspim.py  test_qc.py  test_qc_coverage.py  test_raw_to_derived.py  (+6 more)
(+48 files in other folders)
