[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "biodata-cache"
description = "Caching and synchronization for AIND metadata."
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'duckdb',
    'pyarrow',
    'boto3',
    'pandas>=2.2.0',
    'aind-data-access-api[docdb]',
    'aind-dynamic-foraging-database',
    'semver',
    'zarr<3',
]

[dependency-groups]
dev = [
    'ruff',
    'coverage',
    'interrogate',
    'pre-commit',
    'pytest',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "biodata_cache.__version__"}

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    ".venv",
    "venv",
    ".conda",
    ".eggs",
    ".hg",
    ".mypy_cache",
    ".tox",
    "_build",
    "dist",
    ".gitignore"
]


# Choose what to enable: these roughly replace flake8, isort, etc.
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort rules
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line length (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*__init__*"]
source = ["biodata_cache", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 100

[tool.interrogate]
exclude = ["setup.py", "docs", "build", ".conda"]
fail-under = 100
